# dqsim

./: .gitignore  CMakeLists.txt  Readme.md  main.py  pyproject.toml
sparkbench/: .gitignore  build.sbt  docker-compose.yml  run-sweep.sh
sparkbench/analysis/: create_plan.py  json_writing.py  runtime_plot.py  simulation_results.py
sparkbench/hive/: Dockerfile  init-hive.sh  metastore-site.xml
sparkbench/spark/: Dockerfile  entrypoint.sh  spark-defaults.conf
sparkbench/workloads/: metrics2.scala  setup-tpch.scala  tpch.scala
sparkbench/workloads/queries-tpch/: tpch-q1.scala  tpch-q10.scala  tpch-q12.scala  tpch-q13.scala  tpch-q14.scala  tpch-q15.scala  tpch-q16.scala  tpch-q17.scala  tpch-q18.scala  tpch-q19.scala  tpch-q20.scala  tpch-q21.scala  tpch-q3.scala  tpch-q4.scala  tpch-q5.scala  tpch-q6.scala  tpch-q7.scala  tpch-q8.scala  tpch-q9.scala
src/: Cluster.cpp  Cluster.hpp  CustomTypes.cpp  CustomTypes.hpp  MemorySimulator.cpp  MemorySimulator.hpp  Simulator.cpp  Simulator.hpp  SimulatorImpl.cpp  SimulatorImpl.hpp  TempFile.cpp  TempFile.hpp  Util.hpp  benchmarkStandalone.cpp  sim.cpp
src/benchmark/: BenchmarkDefinition.cpp  BenchmarkDefinition.hpp  BenchmarkRunner.cpp  BenchmarkRunner.hpp  ClusterBuilder.cpp  ClusterBuilder.hpp  DUBuilder.cpp  DUBuilder.hpp  Handcrafted.cpp  Handcrafted.hpp  nodeTypes.json
src/distributedplan/: DataUnit.cpp  DataUnit.hpp  DistributedQueryPlan.cpp  DistributedQueryPlan.hpp  Pipeline.cpp  Pipeline.hpp  ProblemWriter.cpp  ProblemWriter.hpp
src/infra/: CommandLine.cpp  CommandLine.hpp  Config.hpp  Enum.hpp  FiniteDouble.cpp  FiniteDouble.hpp  JSONMapping.cpp  JSONMapping.hpp  JSONReader.cpp  JSONReader.hpp  JSONWriter.cpp  JSONWriter.hpp  ParentManaging.hpp  RawObjectStorage.hpp  SmallVector.cpp  SmallVector.hpp
src/network/: NetworkSimulator.cpp  NetworkSimulator.hpp  StreamSimulator.cpp  StreamSimulator.hpp
src/partitioning/: Attribute.cpp  Attribute.hpp  Partition.cpp  Partition.hpp  PartitionLayout.cpp  PartitionLayout.hpp  PartitionManager.cpp  PartitionManager.hpp  Partitioner.cpp  Partitioner.hpp
src/planning/: AssignmentPlannerState.cpp  AssignmentPlannerState.hpp  ComponentPlanner.cpp  ComponentPlanner.hpp  EnumerationPlanner.cpp  EnumerationPlanner.hpp  GreedyInfra.cpp  GreedyInfra.hpp  GreedyPlanner.cpp  GreedyPlanner.hpp  HEFTPlanner.cpp  HEFTPlanner.hpp  HEFTScheduler.cpp  HEFTScheduler.hpp  NetHEFTPlanner.cpp  NetHEFTPlanner.hpp  NetHEFTScheduler.cpp  NetHEFTScheduler.hpp  PolarisPlanner.cpp  PolarisPlanner.hpp  TaskAssignmentPlanner.cpp  TaskAssignmentPlanner.hpp  TaskPlanner.cpp
src/tasks/: Task.cpp  Task.hpp
visualization/: TaskAssignmentBenchmarkResults.ipynb  eval_benchmark.py  figures.py  infra.py  sparkbench_figures.py
visualization/benchmarks/: common.json  full_enumeration.json  growing.json  growing_scale_out.json  growing_scale_out_to_large.json  heterogeneous.json  scale_out.json  scale_out_to_large.json  scaling_nodes.json  scaling_nodes_random.json  scaling_partitions.json  scaling_partitions_high.json  scaling_partitions_random.json  state_sep.json
